--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AcousticBarcodes</string>
+    <string name="title_activity_main">Acoustic Barcodes</string>
     <string name="project_title">Acoustic Barcodes</string>
     <string name="authors_line">By Spencer Barton &amp; David Lu</string>
     <string name="class_name">18–551 Spring 2015</string>
@@ -9,4 +10,5 @@
     <string name="settings">Settings</string>
     <string name="scan_btn_recording">Recording</string>
     <string name="scan_btn_done">"Saved "</string>
+    <string name="title_activity_main_activity2"></string>
 </resources>
