--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="scan_btn_recording">Recording</string>
     <string name="scan_btn_done">"Saved "</string>
     <string name="title_activity_main_activity2"></string>
+    <string name="pref_main_title">Settings</string>
+    <string name="pref_debug_plots_title">Debug Plots</string>
+    <string name="pref_debug_plots_sum">Turn on plots for debugging</string>
+    <string name="pref_debug_plots_default">false</string>
 </resources>
