--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="barcode_btn_start">Start Scan</string>
     <string name="barcode_btn_stop">Stop Scan</string>
     <string name="action_settings">Settings</string>
-    <string name="settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="scan_btn_recording">Recording</string>
     <string name="scan_btn_done">"Saved "</string>
     <string name="title_activity_main_activity2"></string>
